--- a/public/assets/content/css/shared-ltr.css
+++ b/public/assets/content/css/shared-ltr.css
@@ -5067,6 +5067,11 @@ body {
   border: 1px solid #D4D4D4;
   border-radius: 15px;
 }
+.slick-slide img {
+  height: 276px;
+  object-fit: cover;
+  border-radius: 12px;
+}
 .marquee {
   display:flex;
   flex-wrap: nowrap;
@@ -5143,7 +5148,7 @@ a:link {
 .our-home .regular .slick-next {
   font-size: 0;
   line-height: 0;
-  z-index: 999;
+  z-index: 80;
   position: absolute;
   top: 50%;
   display: block;
@@ -5998,7 +6003,7 @@ div.multiselect-dropdown {
 .details .details-slider .slick-next {
   font-size: 0;
   line-height: 0;
-  z-index: 9999;
+  z-index: 80;
   position: absolute;
   top: 80%;
   display: block;
@@ -6113,14 +6118,14 @@ div.multiselect-dropdown {
   left: -6px;
 }
 .details .advanc-slider .slick-prev {
-  z-index: 9999;
+  z-index: 80;
   left: 18px;
 }
 .details .advanc-slider .slick-prev::before {
   font-size: 26px !important;
 }
 .details .advanc-slider .slick-next {
-  z-index: 9999;
+  z-index: 80;
   right: 25px;
 }
 .details .advanc-slider .slick-next::before {
@@ -6273,7 +6278,7 @@ div.multiselect-dropdown {
   right: 0;
   bottom: 0;
   display: none;
-  z-index: 999999999;
+  z-index: 110;
 }
 .details .lightbox-contaner .lightbox-item {
   width: 60%;
@@ -6356,6 +6361,7 @@ div.multiselect-dropdown {
   line-height: 1.2em;
   overflow: visible;
   color: #000;
+  word-break: break-all;
 }
 
 /* View Product */
@@ -6364,9 +6370,20 @@ div.multiselect-dropdown {
 }
 .reg-ask-btns {
   width: 100%;
+  position: relative;
 }
-.reg-ask-btns > a {
+.reg-ask-btns > .ra-btn {
   width: 48.5%;
+}
+.reg-ask-btns > .ra-btn a,
+.reg-ask-btns > .ra-btn button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.reg-ask-btns > .ra-btn img {
+  width: 24px;
+  margin-right: 10px; 
 }
 .reg-ask-btns button {
   display: flex;
@@ -6443,6 +6460,16 @@ height: 53px;
 }
 .about-dev-img {
   margin-right: 15px;
+  width: 115px;
+  height: 115px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border:  1px solid #707070;
+  border-radius: 17px;
+}
+.about-dev-details {
+  width: calc(100% - 130px);
 }
 .about-dev-details h3 {
   font-weight: bold;
@@ -6474,6 +6501,297 @@ height: 53px;
 .wat-vid-title {
   margin-bottom: 23px !important;
 }
+.share-btn {
+  position: absolute;
+  top: 16px;
+  left: 125%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+.share-btn:hover {
+  background: #ffffff29
+}
+.modal-share-container {
+  border-radius: 12px !important;
+}
+.modal-header,
+.modal-body {
+  padding: 14px 19px !important;
+}
+.modal-share-container .btn-close {
+  margin: 0 !important;
+  font-size: 12px;
+}
+.modal-header {
+  border: none !important
+}
+.modal-b-title {
+  font-size: 23px;
+  margin-bottom: 24px;
+  font-weight: 600;
+  color: rgb(34, 34, 34);
+}
+.modal-grid {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  grid-gap: 12.52rem;
+  gap: 20px;
+  margin-top: 40px;
+}
+.modal-body  {
+  padding-bottom: 33px !important;
+}
+.share-linked-card {
+  display: flex;
+  align-items: center;
+  border: 1px solid rgb(221, 221, 221) !important;
+  padding: 14px 17px;
+}
+.share-linked-card:hover {
+  background: #eeeeee99;
+}
+.share-linked-card img {
+  width: 32px;
+  height: 32px;
+  margin-right: 10px;
+}
+.share-linked-card {
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 600 !important;
+  overflow: hidden !important;
+  color: rgb(34, 34, 34) !important;
+  text-overflow: ellipsis !important;
+}
+.modal-b-it img {
+  max-width: 100%;
+  width: 64px;
+  height: 64px;
+  border-radius: 8px;
+  object-fit: cover;
+  margin-right: 16px;
+}
+.modal-b-it-title {
+  font-size: 16px;
+  color: rgb(34, 34, 34);
+}
+#map {
+  height: 400px;
+  /* The height is 400 pixels */
+  width: 100%;
+  /* The width is the width of the web page */
+  border-radius: 12px
+}
+
+/* Contact Form  */
+
+.project-contact-form {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 90;
+  background: #fff;
+  border: 1px solid #898989;
+  padding: 13px 14px;
+  display: none;
+}
+.close-contact,
+.ra-btn button,
+.close-contact:active,
+.close-contact:hover,
+.ra-btn button:active,
+.ra-btn button:hover {
+  border:  none !important;
+  outline: none !important;
+  box-shadow: none !important;
+}
+.details .optian-details .share-to,
+.details .optian-details .share-to:hover,
+.details .optian-details .share-to:active {
+  border:  none !important;
+  outline: none !important;
+  box-shadow: none !important;
+}
+.contact-header img {
+  width: 100%;
+  object-fit: cover;
+}
+.contact-container {
+  padding: 70px 0 150px;
+}
+.contact-text-container {
+  margin-bottom: 100px;
+}
+.bg-title {
+  font-size: 40px;
+  margin-bottom: 30px;
+}
+.contact-text-container .text,
+.contact-text-address-tel .text {
+  font-size: 21px;
+  color: #333;
+  line-height: 1.5;
+}
+.contact-text-address-tel .text {
+  color: #000;
+}
+.contact-text-address-tel > div:first-of-type {
+  padding-right: 60px;
+}
+.contact-direction-btn .icon {
+  font-weight: 600;
+  font-size: 27px;
+  margin: 0 17px;
+}
+.contact-direction-btn {
+  font-size: 22px;
+  color: #055bd0;
+}
+.contact-direction-btn:hover {
+  color: #055bd0;
+  opacity: 0.7;
+}
+.contact-direction-btn:active {
+  color: #055bd0;
+  opacity: 0.4;
+}
+.contact-direction-btn:focus {
+  color: #055bd0;
+}
+.cform-title {
+  margin-bottom: 12px;
+}
+.cform-title .title {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1;
+  font-weight: bold;
+}
+.close-contact .icon {
+  font-weight: bold;
+}
+.cform-sub {
+  font-size: 17px;
+}
+.cform-group {
+  margin-bottom: 15px;
+  border: 1px solid #898989;
+  padding: 4px 8px;
+}
+.cform-group input,
+.cform-group textarea {
+  width: 100%;
+  font-size: 16px;
+  resize: none;
+  outline: none;
+  border-radius: 0 !important;
+  border:  none;
+}
+.cform-group textarea {
+  border: none;
+}
+#tel-keys {
+  width: 59px;  
+  border: none;
+}
+.cform-action .button-default > * {
+  width: 100%;
+  padding: 11px 22px;
+  text-align: center;
+  justify-content: center;
+  font-size: 15px;
+  background-color: #000;
+  color: #fff;
+  font-weight: 600;
+}
+#agreeTermsConditions {
+  filter: grayscale(1);
+}
+.cform-action .button-default > *:hover{
+  opacity: 0.6;
+}
+.cform-action .button-default > *:active{
+  opacity: 0.4;
+}
+.cform-selecbox {
+  margin-right: 13px;
+  padding-right: 5px;
+  border-right: 1px solid #898989;
+}
+.selectric .label {
+  font-size: 16px !important;
+}
+.selectric-items li {
+  font-size: 15px !important;
+  padding: 9px 10px;
+}
+.checkbox-text {
+  font-size: 13px !important;
+  line-height: 1;
+  width: calc(100% - 28px);
+  margin-top: -5px;
+  margin-left: 5px;
+}
+.checkbox-group {
+  margin-top: 13px;
+}
+.modal-tab-container {
+  background: #f8f9fb;
+  padding: 25px 25px;
+  padding-right: 0;
+  margin: 30px 0;
+}
+.modal-tab-flexable {
+  display: flex;
+}
+.modal-tab-actions {
+  width: 70px;
+  padding: 0 10px;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+}
+.modal-tab-tel {
+  margin: 25px 0;
+}
+.modal-tab-actions > div {
+  width: 100%;
+}
+.mss-btn-black {
+  background: #000 !important;
+  color: #fff;
+}
+.mss-btn-black:hover,
+.mss-btn-black:active,
+.mss-btn-black:focus {
+  background: #000 !important;
+  color: #fff;
+}
+.mss-btn {
+  width: 100%;
+  display: inline-block;
+  text-align: center;
+  margin-bottom: 13px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  padding: 9px 7px;
+}
+.mss-btn .icon {
+  font-weight: bold;
+  font-size: 23px;
+}
+.mss-btn .icon-sm {
+  font-size: 26px !important;
+}
+/* Contact Form  */
+
+
 /* View Product */
 
 /* Whatsapp */
@@ -6481,6 +6799,7 @@ height: 53px;
   top: 50%;
   display: inline-block;
   width: auto;
+  z-index: 100 !important;
 }
 /* Whatsapp */
 
@@ -6887,6 +7206,24 @@ footer nav .navbar-nav .nav-link:hover {
   .loc-video {
     margin-top: 15px;
   }
+  .share-linked-card {
+        font-size: 14px !important;
+        padding: 11px 12px
+  }
+  .modal-b-title {
+          font-size: 17px;
+  }
+  .share-linked-card img {
+    width: 27px;
+    height: 27px;
+  }
+  .modal-b-it img {
+    width: 55px;
+    height: 55px;
+  }
+  .modal-b-it-title {
+        font-size: 14px;
+  }
   /* View Products (Details) */
   
 }
@@ -7258,9 +7595,13 @@ footer nav .navbar-nav .nav-link:hover {
     font-size: 11px;
     margin-right: 6px;
   }
-  .details .about-dev img {
-    width: 80px;
-    border-radius: 10px;
+  .about-dev-img {
+    width: 90px !important;
+    height: 90px !important;
+  }
+  .share-btn {
+    top: 10px;
+    left: 86%;
   }
   .about-dev-img {
     margin-right: 10px;
@@ -7513,6 +7854,9 @@ footer nav .navbar-nav .nav-link:hover {
   }
   .area-details {
     flex-wrap: wrap;
+  }
+  .share-btn {
+        left: 116%;
   }
   /* View Product */
 
