--- a/public/assets/content/css/shared-ltr.css
+++ b/public/assets/content/css/shared-ltr.css
@@ -4509,6 +4509,7 @@ header nav .navbar-toggler-icon {
 .navbar-expand-lg .navbar-nav .nav-link:hover {
   color: #52BA64;
 }
+
 header .nav-item .submenu {
   display: none;
   left: 100%;
@@ -4661,6 +4662,9 @@ body {
 }
 .nf-copyright div a {
   color: #666;
+}
+.navbar-logo img {
+  width: 170px !important;
 }
 .nf-bottom {
   width: 100%;
@@ -7522,6 +7526,9 @@ footer nav .navbar-nav .nav-link:hover {
     background: #fff;
     z-index: 96034;
     overflow-y: auto;
+  }
+  .navabr-container {
+        padding: 13px 0;
   }
   .navbar-links-content.active {
     display: flex;
