fix fontawesome and add int tel plugin to contact us & updates

--- a/public/assets/content/css/shared-ltr.css
+++ b/public/assets/content/css/shared-ltr.css
@@ -7052,7 +7052,7 @@ footer nav .navbar-nav .nav-link:hover {
     border-radius: 30px;
   }
   .home-slidr img {
-    transform: scaleX(1.8);
+    object-fit: cover;
   }
   .home-heading {
     font-size: 21px;
