--- a/public/assets/content/css/shared-ltr.css
+++ b/public/assets/content/css/shared-ltr.css
@@ -6752,9 +6752,10 @@ height: 53px;
   text-align: center;
   justify-content: center;
   font-size: 15px;
-  background-color: #000;
+  background-color: #25d366;
   color: #fff;
   font-weight: 600;
+  border:  1px solid #25d366;
 }
 #agreeTermsConditions {
   filter: grayscale(1);
