--- a/public/assets/content/css/shared-ltr.css
+++ b/public/assets/content/css/shared-ltr.css
@@ -84,6 +84,9 @@ body::-webkit-scrollbar-thumb:hover {
 .top-page {
   padding: 40px 0;
 }
+.white-color {
+  color: #fff !important;
+}
 
 #TextEmail.placeholder-green::-webkit-input-placeholder {
   color: green !important;
@@ -6887,6 +6890,22 @@ border-radius: 6px;
 
 .bc-pss {
   margin-bottom: 13px;
+}
+.wap-btn {
+  cursor: pointer;
+}
+.unit-det-title {
+  font-weight: 600;
+    font-size: 19px;
+    color: #000;
+    box-shadow: none;
+    text-shadow: none;
+    margin-bottom: 23px;
+}
+.unit-det-point {
+  font-size: 17px;
+    margin-bottom: 17px;
+    color: #000;
 }
 /* Contact Form  */
 
