--- a/public/assets/content/css/shared-ltr.css
+++ b/public/assets/content/css/shared-ltr.css
@@ -4684,10 +4684,13 @@ body {
 .navbar-footer {
   display: none;
 }
+.navbar-links-content {
+    order: 1
+}
 .navbar-lang {
-    margin-right: 4px;
     display: inline-block;
     margin-left: 30px;
+    order: 2
 }
 .nav-lang-img {
     width: 18px
@@ -7953,6 +7956,11 @@ footer nav .navbar-nav .nav-link:hover {
   .navbar-toggle-btn img {
     height: 28px;
   }
+    .navbar-lang {
+        order: unset;
+        margin-right: 10px;
+        margin-left: 0;
+    }
 }
 
 @media screen and (max-width: 992px) {
@@ -8025,8 +8033,14 @@ footer nav .navbar-nav .nav-link:hover {
   }
   .footer-nav-links {
     justify-content: end !important;
-
   }
+    .navbar-links-box a {
+        font-size: 17px;
+        margin-left: 13px;
+    }
+    .navbar-lang {
+        margin-left: 17px;
+    }
   .footer-nav-links li {
     display: inline-block;
     margin-left: 15px !important;
